# pycounts

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  example.ipynb
src/pycounts/: plotting.py  pycounts.py
tests/: einstein.txt  test_pycounts.py
